# news-classification

./: .gitignore  .pre-commit-config.yaml  1.dvc  README.md  artifacts.dvc  key1906.txt  key1906.txt.pub  main.py  models.dvc  pyproject.toml  train.py
.dvc/: config
config/: config.yaml
config/artifacts/: default.yaml
config/checkpoint/: default.yaml
config/data/: default.yaml
config/data_load/: data_load.yaml
config/infer/: default.yaml
config/model/: lstm.yaml
config/onnx_config/: default.yaml
config/preprocess/: text.yaml
config/train/: default.yaml
data/__MACOSX/: ._rus_news_data
data/rus_news_data/: .gitignore  test.csv.dvc  train.csv.dvc  val.csv.dvc
models/: lstm.py  model.onnx
news_classifier/: infer.py  train.py
news_classifier/artifacts/: download_artifacts.py  ensure_artifacts.py
news_classifier/data/: data_module.py  dataset.py  download_data.py  ensure_data.py
news_classifier/deployment/: download_onnx.py  export_onnx.py
news_classifier/models/: download_model.py  ensure_model.py  lstm.py
news_classifier/predict/: predictor.py
notebooks/: baseline.ipynb  explore_data.ipynb  model_analysis.ipynb
outputs/2026-06-17/23-16-44/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-17/23-25-57/.hydra/: hydra.yaml
outputs/2026-06-17/23-34-37/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-17/23-38-50/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-17/23-41-59/.hydra/: hydra.yaml
outputs/2026-06-18/23-42-29/.hydra/: hydra.yaml
outputs/2026-06-19/00-05-05/.hydra/: config.yaml  (+1 more)
scripts/: download.py  download_and_split.py  download_embeddings.py
scripts/modules/: data_module.py  dataset.py  lstm.py  plot_callback.py  preprocess.py  vocabulary.py
train/: train.py
(+31 files in other folders)
