[project]
name = "news-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.1",
    "gdown>=6.1.0",
    "googledrivedownloader>=1.1.0",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "ruff>=0.15.17",
]
