[project]
name = "news-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.67.1",
    "fire>=0.7.1",
    "gdown>=6.1.0",
    "googledrivedownloader>=1.1.0",
    "hydra-core>=1.3.3",
    "omegaconf>=2.3.1",
    "pandas>=3.0.3",
    "pre-commit>=4.6.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "ruff>=0.15.17",
]
