[project]
name = "news-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "fire>=0.7.1",
    "gdown>=6.1.0",
    "gitpython>=3.1.50",
    "googledrivedownloader>=1.1.0",
    "hydra-core>=1.3.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow==3.14.0",
    "omegaconf>=2.3.1",
    "pandas>=2.2,<3",
    "pre-commit>=4.6.0",
    "pydrive2>=1.21.3",
    "pytorch-lightning>=2.6.5",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchmetrics>=1.9.0",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "ruff>=0.15.17",
]
